--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "clsx": "latest",
@@ -18,13 +20,19 @@
     "zod": "latest"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.0.0-alpha.33",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20.0.0",
     "@types/react": "rc",
     "@types/react-dom": "rc",
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.0.0",
+    "jsdom": "^27.4.0",
     "postcss": "^8.0.0",
     "tailwindcss": "^4.0.0-alpha.33",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^4.0.17"
   }
 }
