--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/node": "^20.0.0",
-    "@types/react": "rc",
-    "@types/react-dom": "rc",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.0.0",
     "jsdom": "^27.4.0",
