--- a/package.json
+++ b/package.json
@@ -17,25 +17,26 @@
     "clsx": "latest",
     "dotenv": "^17.2.3",
     "lucide-react": "latest",
-    "next": "16.1.1-canary.27",
-    "react": "rc",
-    "react-dom": "rc",
+    "next": "^16.1.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "latest",
     "zod": "latest"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
-    "@tailwindcss/postcss": "^4.0.0-alpha.33",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.0.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.0.0",
     "jsdom": "^27.4.0",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^4.0.0-alpha.33",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.0.0",
     "vitest": "^4.0.17"
   }
