--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest --no-color",
-    "test:e2e": "playwright test"
+    "test:e2e": "cross-env DOTENV_CONFIG_PATH=.env playwright test > test.log 2>&1"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -34,6 +34,7 @@
     "@types/react-dom": "latest",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.0.0",
+    "cross-env": "^10.1.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
