--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL="your_supabase_url"
-NEXT_PUBLIC_SUPABASE_ANON_KEY="your_anon_key"
-SUPABASE_SERVICE_ROLE_KEY="your_service_role_key"
+NEXT_PUBLIC_SUPABASE_URL="your-supabase-url"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="your-supabase-anon-key"
+SUPABASE_SERVICE_ROLE_KEY="your-supabase-service-role-key"
+GEMINI_API_KEY="your-gemini-api-key"
+OPENAI_API_KEY="your-openai-api-key"
 
-# Linear Integration
-# Obtenez votre clé API sur: https://linear.app/settings/api
-LINEAR_API_KEY="lin_api_YOUR_KEY_HERE"
-LINEAR_TEAM_ID="YOUR_TEAM_ID_HERE"
+# Feature Flags - Story 2.11b (BMA-48)
+# ENABLE_PERSIST_FIRST: Control persist-first architecture rollout
+# Default: false (safe - legacy localStorage behavior)
+# Rollout: 10% → 50% → 100% with 24h monitoring between phases
+NEXT_PUBLIC_ENABLE_PERSIST_FIRST=false
+ENABLE_PERSIST_FIRST=false
