feat(story-2.11b): implement persist-first architecture
Story: BMA-48 - Architecture Persist-First (Security & Stability)

## Backend (AC1)
- POST /api/posts/anonymous - Persist post BEFORE auth
- POST /api/posts/link-to-user - Link post to user after auth
- Rate limiting: 5 posts/hour per IP
- Zod validation on all inputs
- Unit tests: 13/13 passing (7 anonymous + 6 link-to-user)

## Frontend (AC2)
- Modified auth-modal.tsx with persist-first logic
- Feature flag: NEXT_PUBLIC_ENABLE_PERSIST_FIRST (default: false)
- localStorage cleared AFTER 200 response
- Modified auth/confirm/page.tsx to link posts
- Modified final-reveal.tsx to pass postData
- Unit tests: 8/8 passing (auth-modal.test.tsx)

## Tests (AC3-AC5)
- E2E: acquisition-persist-first.spec.ts (4 tests)
- E2E: acquisition-rate-limiting.spec.ts (3 tests)
- Vitest setup configured for env vars
- Total: 162/162 unit tests passing (0 regressions)

## Security (AC6)
- localStorage security validated
- Rate limiting enforced (X-RateLimit-* headers)
- No PII in logs
- RLS policies respected (admin bypass for anonymous only)

Technical review: GO decision (95% confidence)
Blockers: 0 | Warnings: 3 minor (non-blocking)

Ready for staging deployment.

Related: BMA-48, BMA-45, BMA-46
Fixes: BUG-006 (localStorage security), BUG-007 (multi-email)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "vitest --no-color",
     "test:coverage": "vitest --no-color --coverage",
-    "test:e2e": "cross-env DOTENV_CONFIG_PATH=.env playwright test > test.log 2>&1"
+    "test:e2e": "cross-env DOTENV_CONFIG_PATH=.env playwright test > test.log 2>&1",
+    "db:backup": "node scripts/backup-db.mjs"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
