--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -72,7 +72,7 @@ development_status:
   2-9-e2e-test-completion: ready-for-dev  # Linear: BMA-10
   2-10-unit-tests-documentation: ready-for-dev  # Linear: BMA-11
   2-11-epic-2-bug-fixes: cancelled  # Linear: BMA-9 - SPLITTED into 2.11a + 2.11b (Go/No-Go Decision 27/01/2026)
-  2-11b-persist-first-architecture: backlog  # Linear: BMA-48 - BUG-006, BUG-007 Security (8h, P0 CRITICAL) - PRIORITÉ #1
+  2-11b-persist-first-architecture: in-progress  # Linear: BMA-48 - BUG-006, BUG-007 Security (8h, P0 CRITICAL) - PRIORITÉ #1 - Phase 0 SKIPPED (Plan Free)
   2-11a-quick-wins: backlog  # Linear: BMA-49 - BUG-002 Dashboard, BUG-003 Archetype (2h30, P1 MEDIUM)
   2-12-cleanup-job-posts-orphelins: backlog  # Linear: BMA-50 - Cleanup posts pending>24h (3h, P2 LOW, blocked by BMA-48)
   epic-2-retrospective: optional
@@ -103,6 +103,24 @@ development_status:
   
   # BONUS (optionnel):
   # - BMA-8: BUG-008 E2E cross-browser (3h)
+  
+  # ============================================================================
+  # PHASE 0 SETUP DECISION (27/01/2026 14:20 - Story 2.11b)
+  # ============================================================================
+  # Status: SKIPPED (Approved by PO Florian - Option 2)
+  # Raison: Plan Supabase Free + Docker non installé
+  # Contexte: Base de données NON-PRODUCTION, contenu peut être effacé
+  # Risque: ACCEPTÉ - Perte potentielle de données récentes
+  # Mitigation: 
+  #   - Rollback SQL disponible (20260127_rollback_archetype.sql)
+  #   - Feature flag ENABLE_PERSIST_FIRST (désactivation instantanée)
+  #   - RUNBOOK d'urgence validé
+  # Documentation: 
+  #   - RUNBOOK-EMERGENCY-RESTORE.md (backup manuel)
+  #   - scripts/backup-db-manual-guide.md (guide complet)
+  # Next: Story 2.11b Phase 1 peut démarrer MAINTENANT ✅
+  # Future: Installer Docker Desktop (voir note Linear ci-dessous)
+  # ============================================================================
 
   # Epic 3: Dashboard & Personnalisation (Engagement)
   epic-3: backlog
