test(story-2-9): complete E2E validation - 24/24 tests passing on 3 browsers (BMA-10)

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -69,7 +69,7 @@ development_status:
   2-6-stabilization-refactoring: done
   2-7-auth-persistence-simplification: done
   2-8-production-readiness: done
-  2-9-e2e-test-completion: in-progress  # Linear: BMA-10 - E2E tests 24/24, CI/CD, doc
+  2-9-e2e-test-completion: review  # Linear: BMA-10 - E2E tests 24/24, CI/CD, doc ✅ COMPLETE
   2-10-unit-tests-documentation: ready-for-dev  # Linear: BMA-11
   2-11-epic-2-bug-fixes: cancelled  # Linear: BMA-9 - SPLITTED into 2.11a + 2.11b (Go/No-Go Decision 27/01/2026)
   2-11b-persist-first-architecture: done  # Linear: BMA-48 - BUG-006, BUG-007 Security (8h, P0 CRITICAL) - ✅ Completed & rolled out in production
