--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -70,7 +70,7 @@ development_status:
   2-7-auth-persistence-simplification: done
   2-8-production-readiness: done
   2-9-e2e-test-completion: review  # Linear: BMA-10 - E2E tests 24/24, CI/CD, doc ✅ COMPLETE
-  2-10-unit-tests-documentation: ready-for-dev  # Linear: BMA-11
+  2-10-unit-tests-documentation: review  # Linear: BMA-11 - Tests (91.66% coverage) + Ops docs (5 guides) ✅ COMPLETE
   2-11-epic-2-bug-fixes: cancelled  # Linear: BMA-9 - SPLITTED into 2.11a + 2.11b (Go/No-Go Decision 27/01/2026)
   2-11b-persist-first-architecture: done  # Linear: BMA-48 - BUG-006, BUG-007 Security (8h, P0 CRITICAL) - ✅ Completed & rolled out in production
   2-11a-quick-wins: done  # Linear: BMA-49 - BUG-002 Dashboard, BUG-003 Archetype - ✅ Clôturée 29/01/2026, passage à 2-9
